AST Support for position in source code.

--- a/ide/build.properties
+++ b/ide/build.properties
@@ -26,5 +26,5 @@ parser.java=${src.gen}/Parser.java
 sym.java=${src.gen}/sym.java
 # ARGS
 jflex.args=--noinputstreamctor -d ${src.gen} ${scanner.spec}
-cup.args=-compact_red -expect 10000 -package compiler.generated -destdir ${src.gen} -parser Parser ${parser.spec}
+cup.args=-compact_red -expect 10000 -package compiler.generated -interface -destdir ${src.gen} -nopositions -parser Parser ${parser.spec}
 
