--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -81,6 +81,7 @@
             <artifactId>platform</artifactId>
             <version>3.4.0</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -94,7 +95,27 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>${exec.mainClass}</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- LAUNCH4J -->
@@ -110,11 +131,11 @@
                         </goals>
                         <configuration>
                             <headerType>console</headerType>
-                            <jar>target/Kamerasteuerung-0.0.3-SNAPSHOT-jar-with-dependencies.jar</jar>
-                            <outfile>target/CameraControl.exe</outfile>
+                            <jar>target/ide-0.0.1-SNAPSHOT-jar-with-dependencies.jar</jar>
+                            <outfile>target/AcpToolsSuiteIde.exe</outfile>
                             <downloadUrl>http://java.com/download</downloadUrl>
                             <classPath>
-                                <mainClass>de.thz.cameracontrol.server.Server</mainClass>
+                                <mainClass>${exec.mainClass}</mainClass>
                             </classPath>
                             <jre>
                                 <bundledJre64Bit>false</bundledJre64Bit>
@@ -131,34 +152,10 @@
                                 <productVersion>1.0.0.0</productVersion>
                                 <txtProductVersion>1.0.0.0</txtProductVersion>
                                 <productName>${project.name}</productName>
-                                <internalName>AppName</internalName>
-                                <originalFilename>CameraControl.exe</originalFilename>
+                                <internalName>AcpToolsSuiteIde</internalName>
+                                <originalFilename>AcpToolsSuiteIde.exe</originalFilename>
                             </versionInfo>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <mainClass>de.thz.cameracontrol.server.Server</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>attached</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
